rstsr-mkl-ffi/src/cblas/ffi_extern.rs


unsafe extern "C" {
    pub fn cblas_dcabs1(z: *const c_void) -> f64;
    pub fn cblas_scabs1(c: *const c_void) -> f32;
    pub fn cblas_sdot(
        N: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
    ) -> f32;
    pub fn cblas_sdoti(N: MKL_INT, X: *const f32, indx: *const MKL_INT, Y: *const f32) -> f32;
    pub fn cblas_ddot(
        N: MKL_INT,
        X: *const f64,
        incX: MKL_INT,
        Y: *const f64,
        incY: MKL_INT,
    ) -> f64;
    pub fn cblas_ddoti(N: MKL_INT, X: *const f64, indx: *const MKL_INT, Y: *const f64) -> f64;
    pub fn cblas_dsdot(
        N: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
    ) -> f64;
    pub fn cblas_sdsdot(
        N: MKL_INT,
        sb: f32,
        X: *const f32,
        incX: MKL_INT,
        Y: *const f32,
        incY: MKL_INT,
    ) -> f32;
    pub fn cblas_cdotu_sub(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        dotu: *mut c_void,
    );
    pub fn cblas_cdotui_sub(
        N: MKL_INT,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *const c_void,
        dotui: *mut c_void,
    );
    pub fn cblas_cdotc_sub(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        dotc: *mut c_void,
    );
    pub fn cblas_cdotci_sub(
        N: MKL_INT,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *const c_void,
        dotui: *mut c_void,
    );
    pub fn cblas_zdotu_sub(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        dotu: *mut c_void,
    );
    pub fn cblas_zdotui_sub(
        N: MKL_INT,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *const c_void,
        dotui: *mut c_void,
    );
    pub fn cblas_zdotc_sub(
        N: MKL_INT,
        X: *const c_void,
        incX: MKL_INT,
        Y: *const c_void,
        incY: MKL_INT,
        dotc: *mut c_void,
    );
    pub fn cblas_zdotci_sub(
        N: MKL_INT,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *const c_void,
        dotui: *mut c_void,
    );
    pub fn cblas_snrm2(N: MKL_INT, X: *const f32, incX: MKL_INT) -> f32;
    pub fn cblas_sasum(N: MKL_INT, X: *const f32, incX: MKL_INT) -> f32;
    pub fn cblas_dnrm2(N: MKL_INT, X: *const f64, incX: MKL_INT) -> f64;
    pub fn cblas_dasum(N: MKL_INT, X: *const f64, incX: MKL_INT) -> f64;
    pub fn cblas_scnrm2(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> f32;
    pub fn cblas_scasum(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> f32;
    pub fn cblas_dznrm2(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> f64;
    pub fn cblas_dzasum(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> f64;
    pub fn cblas_isamax(N: MKL_INT, X: *const f32, incX: MKL_INT) -> usize;
    pub fn cblas_idamax(N: MKL_INT, X: *const f64, incX: MKL_INT) -> usize;
    pub fn cblas_icamax(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> usize;
    pub fn cblas_izamax(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> usize;
    pub fn cblas_isamin(N: MKL_INT, X: *const f32, incX: MKL_INT) -> usize;
    pub fn cblas_idamin(N: MKL_INT, X: *const f64, incX: MKL_INT) -> usize;
    pub fn cblas_icamin(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> usize;
    pub fn cblas_izamin(N: MKL_INT, X: *const c_void, incX: MKL_INT) -> usize;
    pub fn cblas_sswap(N: MKL_INT, X: *mut f32, incX: MKL_INT, Y: *mut f32, incY: MKL_INT);
    pub fn cblas_scopy(N: MKL_INT, X: *const f32, incX: MKL_INT, Y: *mut f32, incY: MKL_INT);
    pub fn cblas_saxpy(
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_saxpby(
        N: MKL_INT,
        alpha: f32,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_saxpyi(N: MKL_INT, alpha: f32, X: *const f32, indx: *const MKL_INT, Y: *mut f32);
    pub fn cblas_sgthr(N: MKL_INT, Y: *const f32, X: *mut f32, indx: *const MKL_INT);
    pub fn cblas_sgthrz(N: MKL_INT, Y: *mut f32, X: *mut f32, indx: *const MKL_INT);
    pub fn cblas_ssctr(N: MKL_INT, X: *const f32, indx: *const MKL_INT, Y: *mut f32);
    pub fn cblas_srotg(a: *mut f32, b: *mut f32, c: *mut f32, s: *mut f32);
    pub fn cblas_dswap(N: MKL_INT, X: *mut f64, incX: MKL_INT, Y: *mut f64, incY: MKL_INT);
    pub fn cblas_dcopy(N: MKL_INT, X: *const f64, incX: MKL_INT, Y: *mut f64, incY: MKL_INT);
    pub fn cblas_daxpy(
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_daxpby(
        N: MKL_INT,
        alpha: f64,
        X: *const f64,
        incX: MKL_INT,
        beta: f64,
        Y: *mut f64,
        incY: MKL_INT,
    );
    pub fn cblas_daxpyi(N: MKL_INT, alpha: f64, X: *const f64, indx: *const MKL_INT, Y: *mut f64);
    pub fn cblas_dgthr(N: MKL_INT, Y: *const f64, X: *mut f64, indx: *const MKL_INT);
    pub fn cblas_dgthrz(N: MKL_INT, Y: *mut f64, X: *mut f64, indx: *const MKL_INT);
    pub fn cblas_dsctr(N: MKL_INT, X: *const f64, indx: *const MKL_INT, Y: *mut f64);
    pub fn cblas_drotg(a: *mut f64, b: *mut f64, c: *mut f64, s: *mut f64);
    pub fn cblas_cswap(N: MKL_INT, X: *mut c_void, incX: MKL_INT, Y: *mut c_void, incY: MKL_INT);
    pub fn cblas_ccopy(N: MKL_INT, X: *const c_void, incX: MKL_INT, Y: *mut c_void, incY: MKL_INT);
    pub fn cblas_caxpy(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_caxpby(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_caxpyi(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *mut c_void,
    );
    pub fn cblas_cgthr(N: MKL_INT, Y: *const c_void, X: *mut c_void, indx: *const MKL_INT);
    pub fn cblas_cgthrz(N: MKL_INT, Y: *mut c_void, X: *mut c_void, indx: *const MKL_INT);
    pub fn cblas_csctr(N: MKL_INT, X: *const c_void, indx: *const MKL_INT, Y: *mut c_void);
    pub fn cblas_crotg(a: *mut c_void, b: *const c_void, c: *mut f32, s: *mut c_void);
    pub fn cblas_zswap(N: MKL_INT, X: *mut c_void, incX: MKL_INT, Y: *mut c_void, incY: MKL_INT);
    pub fn cblas_zcopy(N: MKL_INT, X: *const c_void, incX: MKL_INT, Y: *mut c_void, incY: MKL_INT);
    pub fn cblas_zaxpy(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zaxpby(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        incX: MKL_INT,
        beta: *const c_void,
        Y: *mut c_void,
        incY: MKL_INT,
    );
    pub fn cblas_zaxpyi(
        N: MKL_INT,
        alpha: *const c_void,
        X: *const c_void,
        indx: *const MKL_INT,
        Y: *mut c_void,
    );
    pub fn cblas_zgthr(N: MKL_INT, Y: *const c_void, X: *mut c_void, indx: *const MKL_INT);
    pub fn cblas_zgthrz(N: MKL_INT, Y: *mut c_void, X: *mut c_void, indx: *const MKL_INT);
    pub fn cblas_zsctr(N: MKL_INT, X: *const c_void, indx: *const MKL_INT, Y: *mut c_void);
    pub fn cblas_zrotg(a: *mut c_void, b: *const c_void, c: *mut f64, s: *mut c_void);
    pub fn cblas_srotmg(d1: *mut f32, d2: *mut f32, b1: *mut f32, b2: f32, P: *mut f32);
    pub fn cblas_sroti(N: MKL_INT, X: *mut f32, indx: *const MKL_INT, Y: *mut f32, c: f32, s: f32);
    pub fn cblas_srotm(
        N: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
        Y: *mut f32,
        incY: MKL_INT,
        P: *const f32,
    );
    pub fn cblas_drotmg(d1: *mut f64, d2: *mut f64, b1: *mut f64, b2: f64, P: *mut f64);
    pub fn cblas_drotm(
        N: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
        Y: *mut f64,
        incY: MKL_INT,
        P: *const f64,
    );
    pub fn cblas_droti(N: MKL_INT, X: *mut f64, indx: *const MKL_INT, Y: *mut f64, c: f64, s: f64);
    pub fn cblas_sscal(N: MKL_INT, alpha: f32, X: *mut f32, incX: MKL_INT);
    pub fn cblas_dscal(N: MKL_INT, alpha: f64, X: *mut f64, incX: MKL_INT);
    pub fn cblas_cscal(N: MKL_INT, alpha: *const c_void, X: *mut c_void, incX: MKL_INT);
    pub fn cblas_zscal(N: MKL_INT, alpha: *const c_void, X: *mut c_void, incX: MKL_INT);
    pub fn cblas_csscal(N: MKL_INT, alpha: f32, X: *mut c_void, incX: MKL_INT);
    pub fn cblas_zdscal(N: MKL_INT, alpha: f64, X: *mut c_void, incX: MKL_INT);
    pub fn cblas_srot(
        N: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
        Y: *mut f32,
        incY: MKL_INT,
        c: f32,
        s: f32,
    );
    pub fn cblas_drot(
        N: MKL_INT,
        X: *mut f64,
        incX: MKL_INT,
        Y: *mut f64,
        incY: MKL_INT,
        c: f64,
        s: f64,
    );
    pub fn cblas_crot(
        N: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        c: f32,
        s: *const c_void,
    );
    pub fn cblas_zrot(
        N: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        c: f64,
        s: *const c_void,
    );
    pub fn cblas_csrot(
        N: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        c: f32,
        s: f32,
    );
    pub fn cblas_zdrot(
        N: MKL_INT,
        X: *mut c_void,
        incX: MKL_INT,
        Y: *mut c_void,
        incY: MKL_INT,
        c: f64,
        s: f64,
    );
    pub fn cblas_sgemv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_sgbmv(
        Layout: CBLAS_LAYOUT,
        TransA: CBLAS_TRANSPOSE,
        M: MKL_INT,
        N: MKL_INT,
        KL: MKL_INT,
        KU: MKL_INT,
        alpha: f32,
        A: *const f32,
        lda: MKL_INT,
        X: *const f32,
        incX: MKL_INT,
        beta: f32,
        Y: *mut f32,
        incY: MKL_INT,
    );
    pub fn cblas_strmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const f32,
        lda: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
    );
    pub fn cblas_stbmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f32,
        lda: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
    );
    pub fn cblas_stpmv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        Ap: *const f32,
        X: *mut f32,
        incX: MKL_INT,
    );
    pub fn cblas_strsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        A: *const f32,
        lda: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
    );
    pub fn cblas_stbsv(
        Layout: CBLAS_LAYOUT,
        Uplo: CBLAS_UPLO,
        TransA: CBLAS_TRANSPOSE,
        Diag: CBLAS_DIAG,
        N: MKL_INT,
        K: MKL_INT,
        A: *const f32,
        lda: MKL_INT,
        X: *mut f32,
        incX: MKL_INT,
    );
